# apertur-python

./: .gitignore  README.md  pyproject.toml
src/apertur/: __init__.py  client.py  crypto.py  errors.py  http_client.py  signature.py  types.py
src/apertur/resources/: __init__.py  destinations.py  encryption.py  keys.py  polling.py  sessions.py  stats.py  upload.py  uploads.py  webhooks.py
