[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apertur-sdk"
version = "0.1.6"
description = "Python SDK for the Apertur API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Apertur", email = "dev@apertur.ca" },
]
keywords = ["apertur", "sdk", "upload", "image", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
    "cryptography>=41.0",
    "typing_extensions>=4.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://apertur.ca"
Documentation = "https://docs.apertur.ca"
Repository = "https://github.com/Apertur-dev/apertur-python"

[tool.setuptools.packages.find]
where = ["src"]
